# WW-VectorDB

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/vectordb/common/: json.h  type.h
include/vectordb/core/: meta.h  meta.inl  segment.h
include/vectordb/utils/: uuid.h
include/vectordb/utils/logger/: logger.h
include/vectordb/utils/logger/common/: level.h  message.h  type.h
include/vectordb/utils/logger/formatter/: base.h  default_formatter.h
include/vectordb/utils/logger/logger/: base.h  sync_logger.h
include/vectordb/utils/logger/sink/: base.h  console_sink.h
include/vectordb/utils/math/: distance.h  distance.inl  random.h  random.inl
include/vectordb/utils/memory_pool/cache/: central_cache.h  page_cache.h  thread_cache.h
include/vectordb/utils/memory_pool/common/: common.h  platform.h  size.h
include/vectordb/utils/memory_pool/list/: free_list.h  span_list.h
src/: CMakeLists.txt
src/common/: placeholder.cpp
src/core/: segment.cpp
src/db/: Index.cpp  Index.h  Storage.cpp  Storage.h  VectorDB.cpp  VectorDB.h
src/db/collection/: Collection.cpp  Collection.h
src/db/common/: Types.cpp  Types.h
src/db/index/: BruteForceIndex.cpp  BruteForceIndex.h  Index.h
src/db/segment/: Segment.cpp  Segment.h
src/db/storage/: RocksDBStorage.cpp  RocksDBStorage.h  Storage.h
src/storage/: FileSystem.h  LocalFilesystem.cpp  LocalFilesystem.h
src/utils/: IDManager.cpp  IDManager.h  Serializer.cpp  Serializer.h  VectorUtils.cpp  VectorUtils.h  uuid.cpp
src/utils/logger/: logger.cpp
src/utils/logger/common/: level.cpp
src/utils/logger/formatter/: default_formatter.cpp
src/utils/logger/logger/: base.cpp  sync_logger.cpp
src/utils/logger/sink/: base.cpp  console_sink.cpp
src/utils/memory_pool/cache/: central_cache.cpp  page_cache.cpp  thread_cache.cpp
src/utils/memory_pool/common/: platform.cpp  size.cpp
src/utils/memory_pool/list/: free_list.cpp  span_list.cpp
test/: CMakeLists.txt  vectordb_test.cpp
tests/utils/logger/: sync_console_logger_test.cpp
tests/utils/math/: distance_test.cpp
tests/utils/memory_pool/: thread_cache_test.cpp
tests/utils/uuid/: uuid_test.cpp
